[package]
name = "mirmod-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "json", "mysql", "chrono" ] }
dirs = "5.0.1"
serde = "1.0.107"
serde_json = "1.0.107"
serde_json_any_key = "2.0.0"
base64 = "0.21.4"