[package]
name = "mirmod-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "json", "mysql", "chrono", "bigdecimal" ] }
dirs = "5.0.1"
serde = "1.0.107"
serde_json = "1.0.107"
serde_json_any_key = "2.0.0"
base64 = "0.22.0"
paste = "1.0.14"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4.3"
generic-array = "1.0.0"
sha2 = "0.10.8"
aes = "0.8.4"
chacha20 = "0.9.1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = {}